<resources>
    <string name="app_name">Food Recipies Book</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign UP</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="create_an_account">Create an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_log_in">Back to Login</string>
    <string name="fast_food_recipes">Fast food recipes</string>
    <string name="lorem_ipsm">Lorem Ipsum has been the industry\'s standard dummy since the 1500s</string>
    <string name="pakistani_recipes">Pakistani recipes</string>
    <string name="recommended_recipes">Recommended recipes</string>
    <string name="todo">TODO</string>
    <string name="yours_recipes">Yours recipes</string>
    <string name="you_have_it">You haven\'t added any recipe yet!</string>
    <string name="_120_mint">120 MINT</string>
    <string name="add_your_recipe">Add New Recipe</string>
    <string name="recipe_title">Title</string>
    <string name="recipe_duration">Duration</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_method">Method</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="ingrdents_list_will_go_here_ingrdents_list_will_go_here">Ingrdents List will go here Ingrdents List will go here</string>
    <string name="_30_mint">30 MINT</string>
    <string name="open">open</string>
    <string name="close">close</string>


</resources>