<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:background="@drawable/alert_background"
            android:elevation="15sp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15sp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_your_recipe"
                android:textColor="@color/darkBrown_700"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/newRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:autofillHints=""
                android:backgroundTint="@color/maroon"
                android:hint="@string/recipe_title"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/recipeDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/maroon"
                android:hint="@string/recipe_duration"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/newRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/maroon"
                android:hint="@string/recipe_ingredients"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/recipeMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/txt_background"
                android:gravity="top|start"
                android:hint="@string/recipe_method"
                android:lines="8"
                android:maxLines="100"

                android:minHeight="48dp"
                android:paddingHorizontal="10sp"
                android:paddingVertical="10sp"
                android:scrollbars="vertical"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10sp">

                <Button
                    android:id="@+id/saveRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/cancelRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"

                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/cancel" />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</ScrollView>