<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/home_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:background="@drawable/login_bg_card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="125sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/log_in" />

                <Button
                    android:layout_width="125sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/sign_up" />

                <!--                <com.google.android.material.button.MaterialButton-->
                <!--                    android:layout_width="125sp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginHorizontal="5dp"-->
                <!--                    android:background="@drawable/btn_bg"-->
                <!--                    android:text="@string/log_in"-->
                <!--                    android:textSize="16sp" />-->

                <!--                <com.google.android.material.button.MaterialButton-->
                <!--                    android:layout_width="125sp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:background="@drawable/btn_bg_hollow"-->
                <!--                    android:text="@string/sign_up"-->
                <!--                    android:textColor="@color/maroon"-->
                <!--                    android:textSize="16sp" />-->

            </LinearLayout>

            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:hint="Email"-->
            <!--                    android:textColorHint="@color/brown"/>-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="25sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="20sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="25sp"
                android:background="@drawable/btn_bg"
                android:text="@string/log_in" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/brown"
                android:text="@string/create_an_account"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25sp"
                android:textColor="@color/brown"
                android:text="@string/or"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    android:layout_gravity="center"
                    android:src="@drawable/google"/>
                <ImageView
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="244dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-12dp"
        android:src="@drawable/chef" />

</RelativeLayout>