<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/home_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:background="@drawable/login_bg_card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/logInButton"
                    android:layout_width="125sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:background="@drawable/btn_bg_hollow"
                    android:text="@string/log_in"
                    android:textColor="@color/maroon" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="125sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/sign_up" />

                <!--                <com.google.android.material.button.MaterialButton-->
                <!--                    android:layout_width="125sp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginHorizontal="5dp"-->
                <!--                    android:background="@drawable/btn_bg"-->
                <!--                    android:text="@string/log_in"-->
                <!--                    android:textSize="16sp" />-->

                <!--                <com.google.android.material.button.MaterialButton-->
                <!--                    android:layout_width="125sp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:background="@drawable/btn_bg_hollow"-->
                <!--                    android:text="@string/sign_up"-->
                <!--                    android:textColor="@color/maroon"-->
                <!--                    android:textSize="16sp" />-->

            </LinearLayout>

            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:hint="Email"-->
            <!--                    android:textColorHint="@color/brown"/>-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="25sp"
                android:backgroundTint="@color/maroon"
                android:hint="Username"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <EditText
                android:id="@+id/newEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_bg"
                android:text="@string/sign_up" />

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginHorizontal="20sp"-->
            <!--                android:layout_marginTop="10sp"-->
            <!--                android:text="Already have an account?"-->
            <!--                android:textColor="@color/brown"-->
            <!--                android:textSize="16sp"-->
            <!--                android:textStyle="bold" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="15sp"
                android:text="@string/or"
                android:textColor="@color/brown"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    android:layout_gravity="center"
                    android:src="@drawable/google" />

                <ImageView
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="214dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="199dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-46dp"
        android:src="@drawable/chef" />

</RelativeLayout>