<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/home_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="450dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@drawable/login_bg_card"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Let's Reset Your Password"
                android:textColor="@color/brown"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="25sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:backgroundTint="@color/maroon"
                android:hint="New Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:backgroundTint="@color/maroon"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/maroon"
                android:textColorHint="@color/brown" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10sp"
                android:paddingHorizontal="10sp"
                android:paddingVertical="15sp"
                android:text="@string/log_in"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/btn_bg"
                android:text="Reset Password" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="227dp"
        android:layout_height="246dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="-31dp"
        android:layout_marginBottom="-35dp"
        android:src="@drawable/chef" />

</RelativeLayout>